# quickscript

./: .gitignore  CMakeLists.txt  LICENSE  README.md  allocator.h  errors.cc  errors.h  keyw_lookup.cc  lexer.cpp  lexer.h  main.cpp  parser.cc  parser.h  print-visitor.h  stringtable.cc  stringtable.h  syntaxtree.cc  syntaxtree.h  test.qs  token.cc  token.h  types.h
deno-scripts/: opcode-gen.ts
gperf/: qs-keywords.gperf  run.ps1
src/: allocator.h  common.h  errors.cc  errors.h  main.cpp  optimizations.cc  optimizations.h  stringtable.cc  stringtable.h  types.cc  types.h
src/analysis/: LexicalAnalyzer.cc  LexicalAnalyzer.h  TypeResolver.cc  TypeResolver.h
src/interpreter/: interpreter.h  nativeinterface.cc  nativeinterface.h  opcodes.cc  opcodes.h
src/parse/: keyw_lookup.cc  keyw_lookup.h  lexer.cpp  lexer.h  parser.cc  parser.h  print-visitor.h  syntaxtree.cc  syntaxtree.h  token.cc  token.h  types.h
